[build-system]
requires = ["setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "reflow"
version = "0.0.1"
authors = [
  { name="Ben Howell", email="ben@psychstudio.com" },
]
description = "Reactive-flow state management framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
 	'pyrsistent>=0.20.0',
	'decorator>=5.1.1',
]

[project.optional-dependencies]
test = ["coverage"]

[project.urls]
Homepage = "https://github.com/benhowell/reflow"
Issues = "https://github.com/benhowell/reflow/issues"
